flux/apps/backend-services/papi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-staging
    external-dns.alpha.kubernetes.io/hostname: papi.${subdomain}.${domain}.
    nginx.ingress.kubernetes.io/client-body-buffer-size: 100m
    nginx.ingress.kubernetes.io/proxy-body-size: 12m
    nginx.ingress.kubernetes.io/server-snippet: |
      location = /metrics {
        deny all;
        return 403;
      }
  name: papi
  namespace: backend-services
spec:
  ingressClassName: "ingress-nginx"
  rules:
  - host: papi.${subdomain}.${domain}
    http:
      paths:
      - backend:
          service:
            name: papi
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - papi.${subdomain}.${domain}
    secretName: backend-services-tls
